Added support for FontAwesome

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,5 @@
 /* ==========================================================================
    Colors
    ========================================================================== */
+
+$textColor: #222;
