Adding to readme.

--- a/sass/_media-queries.scss
+++ b/sass/_media-queries.scss
@@ -1,4 +1,5 @@
-// thanks: https://gist.github.com/stammy/4442615
+// Originally: https://gist.github.com/anthonyshort/2028061
+// EM version: https://gist.github.com/stammy/4442615
 // http://paulstamatiou.com/responsive-retina-blog-development-part-1 ...
 // "It's all relative (why you should use ems for breakpoints)"
  
