--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,5 +1,6 @@
 /* ==========================================================================
    Colors
    ========================================================================== */
-
+$white:#fff;
+$black:#000;
 $textColor: #222;
