--- a/css/style.css
+++ b/css/style.css
@@ -2244,7 +2244,7 @@ hr {
 }
 
 /* line 39, ../sass/style.scss */
-* {
+*, *:before, *:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
